# controlled-leaking

./: .gitmodules  copse_lower.py  coyote_lower.py  entropic-paths.py  entropic_paths.py  eq_neq.py  grammar.lark  greedy_entropy.py  holla.py  lark_parse.py  main.py  mux_network.py  pita.py  pita_parser.py  slice_program.py  slicing_dp.py  syntax_errors.py  typecheck.py
backend/: CMakeLists.txt  coyote-runtime.cpp  coyote-runtime.hpp  inputs.hpp  kernel.hpp  main.cpp
backend/copse/include/: sally-server.hpp
backend/copse/source/: model-owner.cpp
backends/: CMakeLists.txt
backends/coil/: kernel.hpp  main.cpp
backends/coil/coil_programs/associative_array.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/coil/coil_programs/elem.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/coil/coil_programs/filter.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/coil/coil_programs/linear_oram.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/coil/coil_programs/log_oram.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/coil/coil_programs/merge.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/coil/coil_programs/mux_test.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/coil/coil_programs/oram_add.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp  oram_add.hpp
backends/coil/coil_programs/sp_auction.coil/: kernel-label.cpp  kernel-left.cpp  kernel-right.cpp  model.cpp
backends/common/include/: coyote-runtime.hpp  inputs.hpp
backends/common/include/copse/: model-owner.hpp  vectrees.hpp
backends/common/source/: coyote-runtime.cpp
backends/common/source/copse/: data-owner.cpp  model-owner.cpp  vectrees.cpp
backends/manual/: add.cpp  associative_array.cpp  common.cpp  common.hpp  filter.cpp  linear_oram.cpp  log_oram.cpp  merge.cpp  sp_auction.cpp
backends/muxes/: add.cpp  associative_array.cpp  filter_small.cpp  main.cpp  mux-common.hpp  mux_test.cpp  oram_add.cpp
benchmarks/: associative_array.pita  filter.pita  filter_small.pita  linear_oram.pita  log_oram.pita  merge.pita  sp_auction.pita
coil_backend/: CMakeLists.txt  coyote-runtime.cpp  coyote-runtime.hpp
coil_backend/copse/include/: data-owner.hpp  vectrees.hpp
coil_backend/copse/source/: data-owner.cpp  sally-server.cpp  vectrees.cpp
